<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/drawer_item_notes"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/notes"
        android:title="@string/notes_text" />

    <item
        android:id="@+id/drawer_item_reminder"
        android:checkable="true"
        android:icon="@drawable/reminder"
        android:title="@string/reminder_text" />

    <group
        android:id="@+id/drawer_group_labels">
        <item
            android:id="@+id/drawer_labels"
            android:title="@string/note_location_labels"
            app:showAsAction="withText">
            <menu />
        </item>
    </group>

    <group android:id="@+id/drawer_group_label_actions">
        <item
            android:id="@+id/drawer_item_create_label"
            android:checkable="false"
            android:icon="@drawable/add_menu"
            android:orderInCategory="2"
            android:title="@string/add_label_text" />
    </group>

    <item
        android:id="@+id/drawer_item_archived"
        android:checkable="true"
        android:icon="@drawable/archive"
        android:orderInCategory="2"
        android:title="@string/archive_text" />
    <item
        android:id="@+id/drawer_item_trash"
        android:checkable="true"
        android:icon="@drawable/delete"
        android:orderInCategory="2"
        android:title="@string/trash_text" />
    <item
        android:id="@+id/drawer_item_premium"
        android:checkable="true"
        android:icon="@drawable/premium"
        android:orderInCategory="2"
        android:title="@string/premium" />
    <item
        android:id="@+id/drawer_item_rate_us"
        android:checkable="false"
        android:icon="@drawable/rating"
        android:orderInCategory="3"
        android:title="@string/rating_text" />

</menu>