<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_background"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:elevation="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:letterSpacing="0.02"
        android:text="@string/create_new_folder"
        android:textColor="@color/dialog_text_color"
        android:textSize="24sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/already_exists"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/already_exists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/try_to_choose_different_name"
        android:textColor="@color/error_color"
        android:textSize="11sp"
        android:paddingVertical="5dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/folder_name"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        app:layout_constraintBottom_toTopOf="@+id/folder_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/folder_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_dialog_background"
        android:hint="@string/new_folder"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/dialog_text_color"
        android:textSize="18sp"
        android:layout_marginHorizontal="10dp"
        android:textCursorDrawable="@drawable/cursor"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintBottom_toTopOf="@+id/buttons_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/already_exists" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/folder_name">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_regular"
            android:foreground="@drawable/transparent_ripple_background"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="@color/text_color_unselect"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_regular"
            android:foreground="@drawable/transparent_ripple_background"
            android:padding="5dp"
            android:text="@string/save"
            android:textColor="@color/selected_tab_color"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>