<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_margin="8dp"
    android:background="@drawable/dialog_background"
    android:layout_gravity="center">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading_delete_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_regular"
        android:letterSpacing="0.02"
        android:text="@string/empty_trash"
        android:textColor="@color/dialog_text_color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_confirmation"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:letterSpacing="0.03"
        android:lineSpacingExtra="5sp"
        android:padding="5dp"
        android:text="@string/do_you_want_to_empty_trash"
        android:textColor="@color/hint_text_color"
        android:textSize="18sp"
        app:fontFamily="@font/poppins_regular"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="@+id/heading_delete_dialog"
        app:layout_constraintTop_toBottomOf="@+id/heading_delete_dialog"
        app:layout_constraintBottom_toTopOf="@+id/buttons_layout"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_confirmation">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_regular"
            android:foreground="@drawable/transparent_ripple_background"
            android:padding="5dp"
            android:text="@string/no"
            android:textColor="@color/text_color_unselect"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_regular"
            android:foreground="@drawable/transparent_ripple_background"
            android:padding="5dp"
            android:text="@string/yes"
            android:textColor="@color/selected_tab_color"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>